[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.0.0"
walkdir = "2"
serde_json = "1.0"
async-trait = "0.1.41"
git2 = { version = "0.19.0" }
comrak = "0.29.0"
clap = { version = "4.0.18", features = ["derive", "cargo"] }
tera = "1.17.0"
syntect = "5.0"
rexiv2 = "0.10.0"
regex = "1.6.0"
base64 = "0.22.1"
bytebuffer = "2.1.1"
tide-rustls = "0.3.0"