[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.13.2", features = ["attributes"] }
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.1"
walkdir = "2.5.0"
serde_json = "1.0.145"
async-trait = "0.1.89"
git2 = { version = "0.20.2" }
comrak = { version = "0.47.0" }
clap = { version = "4.5.51", features = ["derive", "cargo"] }
tera = "1.20.1"
rexiv2 = "0.10.0"
regex = "1.12.2"
base64 = "0.22.1"
bytebuffer = "2.3.0"
tide-rustls = "0.3.0"